--- a/angular.json
+++ b/angular.json
@@ -31,11 +31,13 @@
             ],
             "styles": [
               "src/styles.css",
-              "./node_modules/bootstrap/dist/css/bootstrap.css"
+              "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/sweetalert2/dist/sweetalert2.css"
             ],
             "scripts": [
               "./node_modules/bootstrap/dist/js/bootstrap.js",
-              "./node_modules/jquery/dist/jquery.js"
+              "./node_modules/jquery/dist/jquery.js",
+              "./node_modules/sweetalert2/dist/sweetalert2.js"
             ]
           },
           "configurations": {
