--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/router": "~12.2.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "ngx-cookie-service": "^12.0.3",
     "rxjs": "~6.6.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.1.9",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
